--- a/app/views/application/_navbar.slim
+++ b/app/views/application/_navbar.slim
@@ -1,2 +1,2 @@
 ul
-  li= link_to 'Logout', logout_path, method: :delete, class: 'logout-button',data: { turbo_method: :delete }
+  li= link_to 'Logout', logout_path, method: :delete, class: 'logout-button'
